Swagger documentation is now usable
